# VisioIntegration

./: .gitignore  LICENSE  README.md  desktop.spec  pyproject.toml  test_cost_debug.py
app/: .env.example  README.md  __init__.py  ai_agent.py  desktop.py  diagram_preview.py  mcp_client.py  run.py  streamlit_app.py
app/components/: paste_image.py
app/components/paste_image_frontend/: index.html
scripts/: build_desktop.py
src/visio_mcp/: README.md  __init__.py  __main__.py  azure_catalog.py  azure_sku_grounding.py  caf_validator.py  diagram_state.py  drawio_engine.py  layout_engine.py  models.py  pricing_import.py  reference_architectures.py  server.py  visio_engine.py  waf_validator.py
tests/: README.md  test_ai_landing_zone.py  test_reference_arch.py  test_sku_grounding.py
vscode-extension/: README.md  package-lock.json  package.json
vscode-extension/src/: chatParticipant.ts  diagramPreview.ts  extension.ts  mcpServer.ts
vscode-extension/src/views/: connectionTree.ts  resourceTree.ts  validationTree.ts
